kubernetes/reddit/post-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
  labels:
    app: reddit
    component: post
  annotations:
    description: "This is my post pod"    
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reddit
      component: post
  template:
    metadata:
      name: post
      labels:
        app: reddit
        component: post
    spec:
      containers:
      - image: vasiliybasov/post:latest
        name: post
      imagePullSecrets:
      - name: regcred
