kubernetes/reddit/ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: reddit
    component: ui
  annotations:
    description: "This is my ui pod"  
spec:
  replicas: 3
  # поле которое определяет, какие объекты Kubernetes будут управляться данным ресурсом
  # В данном случае - контроллер будет считать POD-ы с метками: app=reddit И component=ui. Поэтому важно в описании POD-а (секция template) задать нужные метки (labels)
  selector:
    matchLabels:
      app: reddit
      component: ui
  # Здесь задается шаблон pod     
  template:
    metadata:
      name: ui-pod
      labels:
        app: reddit
        component: ui
    spec:
      containers:
      - image: vasiliybasov/ui:latest
        name: ui
      imagePullSecrets:
      - name: regcred
