kubernetes/reddit/comment-service.yml
---
apiVersion: v1
kind: Service
metadata:
  # В DNS появится запись для comment. Что бы узнать ip адрес: kubectl get svc comment
  name: comment
  # Метки для сервиса comment: "app: reddit" и "component: comment"
  labels:
    app: reddit
    component: comment
spec:
  ports:
  - port: 9292  # открываем порт по адресу comment:9292
    protocol: TCP
    targetPort: 9292 # перенаправляет трафик на 9292 в поды, которые имеют метки "app: reddit" и "component: comment"
  # Это означает, что любой трафик, направленный на сервис comment:9292 будет автоматически распределен между подами, которые соответствуют меткам селектора. Прописанные в comment-deployment.yml
  selector:
    app: reddit
    component: comment
