kubernetes/reddit/ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: reddit
    component: ui
spec:
  # Настройка для полученияя доступа извне. Доступ на порту 32092
#  type: LoadBalancer
  # Для работы с Ingress в GCP нам нужен минимум Service с типом NodePort: 
  type: NodePort
  ports:
    # Порт который будет открыт на балансировщике
 #   - port: 80
    # Порт на который будет обращаться Ingress сервис.
    - port: 9292
      # Также на ноде будет открыт порт, но нам он не нужен и его можно даже убрать
#       nodePort: 32091
      protocol: TCP
      # Порт pod-а
      targetPort: 9292
  # К каким объектам будет применяься настройка:    
  selector:
    app: reddit
    component: ui
